--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,9 @@
     position: absolute;
     opacity: 0;
     top: 0;
+
+    z-index: 800;
+    transform: translateX(0);
 }
 
 .carousel-item--active {
@@ -23,7 +26,7 @@
     z-index: 900;
 }
 
-.carousel-item--transition-prev {
+/* .carousel-item--transition-prev {
     max-height: 0;
     z-index: 800;
     transform: translateX(-100%);
@@ -32,4 +35,4 @@
 .carousel-item--transition-next {
     z-index: 800;
     transform: translateX(100%);
-}
+} */
